--- a/.virtual_documents/notebook.ipynb
+++ b/.virtual_documents/notebook.ipynb
@@ -12,11 +12,12 @@ pd.set_option('display.max_columns', None) # Option to force pandas to print eve
 # Web archive URL to keep prevent URL change
 DATA_URL = "https://web.archive.org/web/20240423194012/https://naehrwertdaten.ch/wp-content/uploads/2023/08/Base_de_donnees_suisse_des_valeurs_nutritives.xlsx"
 
-grandeur = {
+CONVERSION_FACTORS = {
     "g": 1,
     "mg": 0.001,
     "kj": 1000,
-    "µg": 0.000001
+    "µg": 0.000001,
+    "kcal": 1000
 }
 
 def fetch_data(URL):
@@ -25,7 +26,11 @@ def fetch_data(URL):
     data = BytesIO(response.content)
     return data
 
-def clean_data(df):
+def remove_accents(text):
+    normalized_text = unicodedata.normalize('NFKD', text)
+    return normalized_text.encode('ascii', 'ignore').decode('utf-8')
+
+def clean_data(df: pd.DataFrame):
     df = df.drop_duplicates()
     df = df.drop(columns=["ID V 4.0", "ID SwissFIR", "Densité", "Entrée modifiée"])
     df = df.drop(df.filter(regex=r'^Source.*').columns, axis=1)
@@ -33,24 +38,28 @@ def clean_data(df):
     df = df.drop(df.filter(regex=r'^Activité de *').columns, axis=1)
 
     double_parenthesis_pattern = r'\s*\([^)]+\)(?=\s*\([^)]+\))'
-    df.columns = df.columns.str.replace(double_parenthesis_pattern, '', regex=True)
     
-    df.columns = [col.strip().replace(',', '').replace(' ', '_').lower() for col in df.columns]
+    df.columns = df.columns.str.replace(double_parenthesis_pattern, '', regex=True)
+    df.columns = [remove_accents(col.strip().replace(',', '').replace(' ', '_').replace("-", "_").lower()) for col in df.columns]
     return df
 
 def create_measures_table(df: pd.DataFrame):
-    dic = {}
+    measures = []
     columns = df.columns
     for col in columns:
-        match = re.search("\((.*?)\)", col)
+        match = re.search(r"\((.*?)\)", col)
         if match:
-            dic[re.sub(r"\((.*?)\)", "", col).strip("_")] = match.group(1)
+            measures.append({
+                "name": re.sub(r"\((.*?)\)", "", col).strip("_"),
+                "unit": match.group(1),
+                "conversion": CONVERSION_FACTORS[match.group(1)]
+            })
 
-    print(dic)
+    return pd.DataFrame(measures)
+        
+    
 
 raw_data = pd.read_excel("swiss_data.xlsx", engine = "openpyxl", skiprows=2)
 data = clean_data(raw_data)
-create_measures_table(data)
-data.head()
-
-
+measures_table = create_measures_table(data)
+data.columns = [re.sub(r"\((.*?)\)", "", col).strip("_") for col in data.columns]
